--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -7,9 +7,9 @@ play {
     # Router
     # ~~~~~
     # Define the Router object to use for this COMMON module
-    router = common.Routes
+    router = adapters.Routes
 
-    context = "/common"
+    context = "/adapters"
 
   }
 }
