cleaned company stuff / added simple travis

--- a/server/conf/reference.conf
+++ b/server/conf/reference.conf
@@ -71,12 +71,11 @@ pme123.adapters.server {
 
   admin.mail {
     // set this to false if you don't want to send mails
-    active = true
+    active = false
     // the Adapter creates a Log during the import.
     // next to the Log file it will also be sent to the following address
     // Default: developer - only for test reasons.
-    recipient = "pascal.mengelt@screenfoodnet.com"
-    recipient = ${?er.javamail.adminEmail}
+    recipient = "admin@example.com"
     // this is the Subject of the admin mail
     // the following will alway be added:
     //  - And the maximal Log Level (eg. WARN if there warnings or INFO if everything went great)
@@ -96,7 +95,7 @@ pme123.adapters.server {
     smtp.tls = false
     smtp.ssl = false
 
-    from = "import-adapter@screenfoodnet.com"
+    from = "pme123-adapters@example.com"
     username = ""
     password = ""
   }
@@ -139,8 +138,8 @@ pme123.adapters.server {
 
 
   # a sequence of domains that have access to the websocket.
-  # This will check if the origin is either 'localhost' or from a domain that ends with 'screenfood.com'.
-  # security.origins = ["localhost", "127.0.0.1", ".screenfoodnet.com",  ".screenfood.com"]
+  # This will check if the origin starts with whatever is in the list.
+  # security.origins = ["localhost", "127.0.0.1", "https://travis-ci.org/profile/pme123"]
   # to disable security uncomment this line
   wsocket.hosts.allowed = ["http://localhost:9000"]
 
