--- a/server/conf/reference.conf
+++ b/server/conf/reference.conf
@@ -100,47 +100,41 @@ pme123.adapters.server {
     password = ""
   }
 
-  scheduler.execution {
-    // the first time of day the Import should run (this is the Server time!). (format is HH:mm)
-    // Default is 01:00
-    first.time = "01:00"
-    // the first weekday if needed (e.g. to emulate once a week)
-    // possible: "monday", "tuesday", "wednesday", "thursday", "friday", "saturday", "sunday" or "-" for nothing
-    first.weekday = "-"
-
-    // the period the Adapter should call the Coop Webservice
-    // Default is one day (1440 minutes) - be aware 1 minute is the smallest period possible
-    // - and it must be greater than the time the import takes!
-    // make also sure that the period is so that the import is at always the same time of day.
-    period.minutes = 1440
-  }
-
-  import.log {
+  process.log {
     // true if the LogReport should be stored to a file
-    enabled = true
+    enabled = false
     // the path where the import/adapter log is stored
     path = "/opt/temp/import_logs"
   }
-  // experimental choose between:
-  // InMemory (the log is done in memory)
-  // MongoDB (the log is persisted in MongoDB)
-  log.service = "InMemory"
-
-  // flags for CSSER-3102:
-  profiles {
-    // if true: existing ProfileValues that are not in the import will be deleted
-    // if false: existing ProfileValues that are not in the import will NOT be deleted
-    replace.missing = false
-    // if true: new ProfileValues that have a null or empty value will be imported.
-    // if false: new ProfileValues that have a null or empty value will NOT be imported.
-    allow.empty.values = true
-  }
-
 
   # a sequence of domains that have access to the websocket.
   # This will check if the origin starts with whatever is in the list.
   # security.origins = ["localhost", "127.0.0.1", "https://travis-ci.org/profile/pme123"]
   # to disable security uncomment this line
   wsocket.hosts.allowed = ["http://localhost:9000"]
+
+  job.configs = [{
+    ident = "testJob"
+    schedule {
+      // the first time of day the Import should run (this is the Server time!). (format is HH:mm)
+      // Default is 01:00
+      first.time = "03:00"
+      // the first weekday if needed (e.g. to emulate once a week)
+      // possible: "monday", "tuesday", "wednesday", "thursday", "friday", "saturday", "sunday" or "-" for nothing
+      first.weekday = "tuesday"
+
+      // the period the Adapter should call the Coop Webservice
+      // Default is one day (1440 minutes) - be aware 1 minute is the smallest period possible
+      // - and it must be greater than the time the import takes!
+      // make also sure that the period is so that the import is at always the same time of day.
+      interval.minutes = 2
+    }
+  }, {
+    ident = "testJobWithDefaultScheduler"
+    schedule {
+    }
+  }, {
+    ident = "testJobWithoutScheduler"
+  }]
 
 }
