made JobActorFactory generic / cleanup Demo

--- a/server/conf/reference.conf
+++ b/server/conf/reference.conf
@@ -114,7 +114,7 @@ pme123.adapters.server {
   wsocket.hosts.allowed = ["http://localhost:9000"]
 
   job.configs = [{
-    ident = "testJob"
+    ident = "demoJob"
     schedule {
       // the first time of day the Import should run (this is the Server time!). (format is HH:mm)
       // Default is 01:00
@@ -130,11 +130,11 @@ pme123.adapters.server {
       interval.minutes = 2
     }
   }, {
-    ident = "testJobWithDefaultScheduler"
+    ident = "demoJobWithDefaultScheduler"
     schedule {
     }
   }, {
-    ident = "testJobWithoutScheduler"
+    ident = "demoJobWithoutScheduler"
   }]
 
 }
