fixes on Heroku files

--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -1,9 +1,11 @@
 // only used for testing
 include "reference"
 
-
 play {
+
   http {
+    secret.key = "Am>[cWbRbeLJL;hOGH<d<ss0GlbvQ`SDW5E;Q^g@B47vrAoBGeB/iud4qUmH?x8n"
+
     # Router
     # ~~~~~
     # Define the Router object to use for this COMMON module
