--- a/server/conf/reference.conf
+++ b/server/conf/reference.conf
@@ -34,13 +34,13 @@ play {
     # https://www.playframework.com/documentation/latest/SecurityHeaders
     # Connect to localhost:9000 for content security policy on websockets
     headers {
-      contentSecurityPolicy = "connect-src 'self' ws://localhost:9000"
+      contentSecurityPolicy = "connect-src 'self' ws://localhost:9000 ws://localhost:5000 wss://tranquil-reef-73468.herokuapp.com"
     }
 
     # https://www.playframework.com/documentation/latest/AllowedHostsFilter
     # Allow requests to localhost:9000.
     hosts {
-      allowed = ["localhost:9000"]
+      allowed = ["localhost:9000","localhost:5000", "tranquil-reef-73468.herokuapp.com"]
     }
   }
   modules {
@@ -111,7 +111,7 @@ pme123.adapters.server {
   # This will check if the origin starts with whatever is in the list.
   # security.origins = ["localhost", "127.0.0.1", "https://travis-ci.org/profile/pme123"]
   # to disable security uncomment this line
-  wsocket.hosts.allowed = ["http://localhost:9000"]
+  wsocket.hosts.allowed = ["http://localhost:9000","http://localhost:5000", "https://tranquil-reef-73468.herokuapp.com", "wss://tranquil-reef-73468.herokuapp.com"]
 
   job.configs = [{
     ident = "demoJob"
