removed unneeded Demo classes / made context dynamic

--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -11,7 +11,7 @@ play {
     # Define the Router object to use for this COMMON module
     router = adapters.Routes
 
-    context = "/adapters"
+    //context = "/adapters"
 
   }
 }
