moved actor classes to main control / started redo JobActor

--- a/server/conf/reference.conf
+++ b/server/conf/reference.conf
@@ -23,7 +23,7 @@ play {
     # If you want to have all filters, change it to: play.http.filters=pme123.adapters.server.boundary.Filters
     # If you want to have no filters, change it to: play.http.filters=pme123.adapters.server.boundary.NoFilters
     # If you are on production, change it to: play.http.filters=pme123.adapters.server.boundary.ProdFilters
-    filters = pme123.adapters.server.boundary.Filters
+    filters = pme123.adapters.server.boundary.ProdFilters
 
     # ErrorHandler
     # ~~~~~
