fixes for example project

--- a/server/conf/reference.conf
+++ b/server/conf/reference.conf
@@ -57,7 +57,7 @@ play {
 // ******************************************************************************** //
 //                   SF Import Client Configuration                                 //
 // ******************************************************************************** //
-pme123.adapters.server {
+pme123.adapters {
 
   // name of the project
   project = "adapters-project"
