adjustments for example

--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -6,11 +6,6 @@ play {
   http {
     secret.key = "Am>[cWbRbeLJL;hOGH<d<ss0GlbvQ`SDW5E;Q^g@B47vrAoBGeB/iud4qUmH?x8n"
 
-    # Router
-    # ~~~~~
-    # Define the Router object to use for this COMMON module
-    router = adapters.Routes
-
     //context = "/adapters"
 
   }
@@ -20,7 +15,7 @@ play {
   }
 }
 
-pme123.adapters.server {
+pme123.adapters {
   admin.mail {
     active = false
   }
