--- a/server/conf/reference.conf
+++ b/server/conf/reference.conf
@@ -25,6 +25,11 @@ play {
     # If you are on production, change it to: play.http.filters=pme123.adapters.server.boundary.ProdFilters
     filters = pme123.adapters.server.boundary.ProdFilters
 
+    # Router
+    # ~~~~~
+    # Define the Router object to use for this ADAPTERS module
+    router = adapters.Routes
+
     # ErrorHandler
     # ~~~~~
     # Define the ErrorHandler to use for this WEB module.
@@ -46,6 +51,7 @@ play {
   modules {
     enabled += "com.kenshoo.play.metrics.PlayModule"
     enabled += "AdaptersModule"
+    enabled += "DemoModule"
   }
   # used for the AssetsFinder API
   assets {
@@ -55,7 +61,7 @@ play {
 }
 
 // ******************************************************************************** //
-//                   SF Import Client Configuration                                 //
+//                   Adapters Configuration                                 //
 // ******************************************************************************** //
 pme123.adapters {
 
