--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -10,6 +10,20 @@ play {
 
   }
 
+  filters {
+    # https://www.playframework.com/documentation/latest/SecurityHeaders
+    # Connect to localhost:9000 for content security policy on websockets
+    headers {
+      contentSecurityPolicy = "connect-src 'self' ws://localhost:9000 ws://localhost:5000 wss://tranquil-reef-73468.herokuapp.com"
+    }
+
+    # https://www.playframework.com/documentation/latest/AllowedHostsFilter
+    # Allow requests to localhost:9000.
+    hosts {
+      allowed = ["localhost:9000","localhost:5000", "tranquil-reef-73468.herokuapp.com"]
+    }
+  }
+
   modules {
     enabled += "DemoModule"
   }
@@ -19,4 +33,6 @@ pme123.adapters {
   admin.mail {
     active = false
   }
+  wsocket.hosts.allowed = ["http://localhost:9000","http://localhost:5000", "https://tranquil-reef-73468.herokuapp.com", "wss://tranquil-reef-73468.herokuapp.com"]
+
 }
