CSSER-3308: added possibility to add parameters for the Websocket path.

--- a/server/conf/reference.conf
+++ b/server/conf/reference.conf
@@ -62,6 +62,9 @@ pme123.adapters {
   // the schedulers or the log entries
   timezone = "Europe/Zurich"
 
+  // the encoding used for an en- and decoding of Strings.
+  char.encoding = "UTF-8"
+
   admin.mail {
     // set this to false if you don't want to send mails
     active = false
