added possibility to start a Job immediately.

--- a/server/conf/reference.conf
+++ b/server/conf/reference.conf
@@ -114,7 +114,8 @@ pme123.adapters {
     schedule {
       // the first time of day the Import should run (this is the Server time!). (format is HH:mm)
       // Default is 01:00
-      first.time = "03:00"
+      // if you want to start the Job right away - use: "NOW"
+      first.time = "NOW"
       // the first weekday if needed (e.g. to emulate once a week)
       // possible: "monday", "tuesday", "wednesday", "thursday", "friday", "saturday", "sunday" or "-" for nothing
       first.weekday = "tuesday"
