added ProjectConfig - so the index.html is not needed anymore!

--- a/server/conf/reference.conf
+++ b/server/conf/reference.conf
@@ -52,8 +52,6 @@ play {
 // ******************************************************************************** //
 pme123.adapters {
 
-  // name of the project
-  project = "adapters-project"
   // there are 2 modes:
   // 1. PROD (default)
   // 2. DEV -> this is used for testing purposes as it creates the Profiles and Layouts automatically if they do not exist.
@@ -109,13 +107,21 @@ pme123.adapters {
   # to disable security uncomment this line
   wsocket.hosts.allowed = ["http://localhost:9000","http://localhost:5000"]
 
+  # Configuration of the Project
+  project.config {
+    name = "scala-adapters"
+    client.name = "DemoClient"
+    page.title = "Demo Adapter"
+    //style.name = "project"
+    demo = true
+  }
+
   job.configs = [{
     ident = "demoJob"
     schedule {
       // the first time of day the Import should run (this is the Server time!). (format is HH:mm)
       // Default is 01:00
-      // if you want to start the Job right away - use: "NOW"
-      first.time = "NOW"
+      first.time = "03:00"
       // the first weekday if needed (e.g. to emulate once a week)
       // possible: "monday", "tuesday", "wednesday", "thursday", "friday", "saturday", "sunday" or "-" for nothing
       first.weekday = "tuesday"
