added DefaultClient - some clean up / documentation / removed demo from default config

--- a/server/conf/reference.conf
+++ b/server/conf/reference.conf
@@ -98,6 +98,7 @@ pme123.adapters {
     // true if the LogReport should be stored to a file
     enabled = false
     // the path where the import/adapter log is stored
+    // only if: enabled = true
     path = "/opt/temp/import_logs"
   }
 
@@ -109,10 +110,21 @@ pme123.adapters {
 
   # Configuration of the Project
   project.config {
+    // name of the project - that must be the same as in Settings.projectName
     name = "scala-adapters"
+    // the name of the client you want to use:
+    // this creates in the index.html -> client.CLIENT_NAME.main
+    // you need to have a ScalaJS function, like:
+    //   @JSExportTopLevel("client.DemoClient.main")
+    // or you use:
+    // client.name = "DefaultClient"
     client.name = "DemoClient"
+    // the title that is shown on the web page
     page.title = "Demo Adapter"
+    // you can optionally have a custom css style-sheet, like: project.css
+    // this must be in public/stylesheets of your project
     //style.name = "project"
+    // this is only needed for this project as it is different (not as webjar)!
     demo = true
   }
 
