--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -12,7 +12,7 @@ group :jekyll_plugins do
   gem "jekyll-paginate"
   gem "jekyll-sitemap"
   gem "jekyll-gist"
-  gem "jekyll-feed"
+ # gem "jekyll-feed"
   gem "jemoji"
   gem "jekyll-algolia"
 end
