adjusted demo defaults to false

--- a/server/conf/demo.conf
+++ b/server/conf/demo.conf
@@ -27,5 +27,10 @@ play {
 }
 
 pme123.adapters {
+
+  project.config {
+    demo = true
+  }
+
   wsocket.hosts.allowed = ["http://localhost:9000","http://localhost:5000", "https://tranquil-reef-73468.herokuapp.com", "wss://tranquil-reef-73468.herokuapp.com"]
 }
