--- a/server/conf/reference.conf
+++ b/server/conf/reference.conf
@@ -125,7 +125,7 @@ pme123.adapters {
     // this must be in public/stylesheets of your project
     //style.name = "project"
     // this is only needed for this project as it is different (not as webjar)!
-    demo = true
+    demo = false
   }
 
   job.configs = [{
