moved special routing / added defaultJob - no job config needed

--- a/server/conf/demo.conf
+++ b/server/conf/demo.conf
@@ -5,6 +5,11 @@ play {
 
   http {
     secret.key = "Am>[cWbRbeLJL;hOGH<d<ss0GlbvQ`SDW5E;Q^g@B47vrAoBGeB/iud4qUmH?x8n"
+
+    # Router
+    # ~~~~~
+    # Define the Router object to use for this ADAPTERS module
+    router = adapters.Routes
   }
 
   filters {
