02-server-jobs.md - state of work

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -187,6 +187,7 @@ defaults:
     values:
       layout: single
       author_profile: true
+      classes: wide
       read_time: true
       comments: true
       share: true
@@ -198,6 +199,7 @@ defaults:
     values:
       layout: single
       author_profile: false
+      classes: wide
       sidebar:
         nav: "docs"
   # _docs
