04-custom-page.md - state of work

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -195,7 +195,7 @@ defaults:
   # _pages
   - scope:
       path: "_pages"
-      type: pages
+      type: docs
     values:
       layout: single
       author_profile: false
