CSTEC-42: Adding first integration test -> added test check in Secured > this is not backward compatible - a small change in the Controllers needed!

--- a/server/conf/demo.conf
+++ b/server/conf/demo.conf
@@ -22,7 +22,7 @@ play {
     # https://www.playframework.com/documentation/latest/AllowedHostsFilter
     # Allow requests to localhost:9000.
     hosts {
-      allowed = ["localhost:9000","localhost:5000", "tranquil-reef-73468.herokuapp.com"]
+      allowed = ["localhost:9000","localhost:5000", "localhost:19001", "tranquil-reef-73468.herokuapp.com"]
     }
   }
 
