--- a/server/conf/demo.conf
+++ b/server/conf/demo.conf
@@ -37,5 +37,5 @@ pme123.adapters {
     demo = true
   }
 
-  wsocket.hosts.allowed = ["http://localhost:9000","http://localhost:5000", "https://tranquil-reef-73468.herokuapp.com", "wss://tranquil-reef-73468.herokuapp.com"]
+  wsocket.hosts.allowed = ["http://localhost:9000","http://localhost:5000", "ws://localhost:19001", "https://tranquil-reef-73468.herokuapp.com", "wss://tranquil-reef-73468.herokuapp.com"]
 }
