Adjust the UIStore as Singleton

--- a/server/conf/demo.conf
+++ b/server/conf/demo.conf
@@ -16,7 +16,7 @@ play {
     # https://www.playframework.com/documentation/latest/SecurityHeaders
     # Connect to localhost:9000 for content security policy on websockets
     headers {
-      contentSecurityPolicy = "connect-src 'self' / ws://localhost:9000 ws://localhost:5000 wss://tranquil-reef-73468.herokuapp.com"
+      contentSecurityPolicy = "connect-src 'self' ws://localhost:9000 ws://localhost:5000 wss://tranquil-reef-73468.herokuapp.com"
     }
 
     # https://www.playframework.com/documentation/latest/AllowedHostsFilter
