Added Redux / Binding.scala Blog

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -182,7 +182,7 @@ collections:
 defaults:
   # _posts
   - scope:
-      path: ""
+      path: "_posts"
       type: posts
     values:
       layout: single
@@ -191,7 +191,7 @@ defaults:
       read_time: true
       comments: true
       share: true
-      related: true
+      related: false
   # _pages
   - scope:
       path: "_pages"
