adjusted required fields

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -39,7 +39,7 @@ staticman:
   format                 : # "yml"
   moderation             : # true
   path                   : # "_data/comments/{options.slug}"
-  requiredFields         : # ['name', 'email', 'message']
+  requiredFields         : ['name', 'message']
   transforms:
     email                : # "md5"
   generatedFields:
