changed mail authentication flag.

--- a/server/conf/reference.conf
+++ b/server/conf/reference.conf
@@ -81,6 +81,7 @@ pme123.adapters {
   mail {
     host = "localhost"
     port = 25
+    smtp.auth = false // true if you have authentication
     smtp.tls = false
     smtp.ssl = false
 
