adjusted detailDialogs / state of work with form

--- a/server/conf/reference.conf
+++ b/server/conf/reference.conf
@@ -138,7 +138,7 @@ pme123.adapters {
       // Default is one day (1440 minutes) - be aware 1 minute is the smallest period possible
       // - and it must be greater than the time the import takes!
       // make also sure that the period is so that the import is at always the same time of day.
-      interval.minutes = 2
+     // interval.minutes = 2
     }
   }, {
     ident = "demoJobWithDefaultScheduler"
