--- a/server/conf/demo.conf
+++ b/server/conf/demo.conf
@@ -39,3 +39,11 @@ pme123.adapters {
 
   wsocket.hosts.allowed = ["http://localhost:9000","http://localhost:5000", "ws://localhost:19001", "/" , "https://tranquil-reef-73468.herokuapp.com", "wss://tranquil-reef-73468.herokuapp.com"]
 }
+
+demo.adapters {
+  hello = "Hello Demo"
+  number = 42
+  password = "pwd123"
+  title.short = "Demo Adapter"
+  title.long = "A Demo to demonstrate the main features of scala-adapters. "
+}
